@@ -1,5 +1,3 @@
-var clone = require('lodash-compat/lang/clone');
-
 var objectsIDs = ['1000', '1001'];
 
 module.exports = {
